# BKISemanticMapping

./: CMakeLists.txt
config/datasets/: mcd.yaml  mcd_colors.yaml  osm_priors.yaml  osm_visualizer.yaml  semantickitti.yaml  semantickitti_colors.yaml  semantickitti_colors2.yaml
config/methods/: semantic_bki.yaml
include/semantic_bki/common/: markerarray_pub.h  osm_geometry.h  osm_visualizer.h
include/semantic_bki/dataset_devkit/: mcd_util.h  semantickitti_util.h
include/semantic_bki/mapping/: bki.h  bkioctomap.h  bkioctree_node.h
launch/: mcd_node.launch  mcd_node_launch.py  mcd_with_osm_launch.py  semantickitti_node.launch
rviz/: mcd_node.rviz
src/: mcd_node.cpp  osm_visualizer_node.cpp  semantickitti_node.cpp
src/common/: osm_visualizer.cpp
src/mapping/: bkioctomap.cpp
